fixed scrollbar

--- a/style/index.css
+++ b/style/index.css
@@ -1,5 +1,3 @@
-html { overflow-y: hidden; }
-
 body{
     background-color: #6093CA !important;
 }
